--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <nav class="p-6 flex justify-between items-center max-w-6xl mx-auto">
         <div class="text-2xl font-bold tracking-tighter">MORGA<span class="text-gray-500">BOTIX</span></div>
-        <a href="mailto:hello@morgabotix.com" class="border border-white px-5 py-2 rounded-full hover:bg-white hover:text-black transition text-sm">Contact</a>
+        <a href="mailto:info@morgabotix.com" class="border border-white px-5 py-2 rounded-full hover:bg-white hover:text-black transition text-sm">Contact</a>
     </nav>
 
     <header class="h-[80vh] flex flex-col justify-center items-center text-center px-4">
