--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </section>
 
     <footer class="py-10 text-center border-t border-gray-900">
-        <p class="text-gray-600 text-sm italic">© 2026 MORGABOTIX LLC. New Jersey, USA.</p>
+        <p class="text-gray-600 text-sm italic">© 2026 MORGABOTIX LLC</p>
     </footer>
 
 </body>
